Final code for FSDB555

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "fullstack-node",
   "version": "1.0.0",
   "description": "Fullstack Node.js Project ",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manikbajaj/fullstack-node.git"
+    "url": "https://github.com/manikbajaj/fullstack-node.git"
   },
   "author": "Cloudaffle",
   "license": "MIT",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/manikbajaj/fullstack-node#readme",
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "express": "^4.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
