Final code for FSDB573

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Fullstack Node.js Project ",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
@@ -20,7 +19,8 @@
   "homepage": "https://github.com/manikbajaj/fullstack-node#readme",
   "dependencies": {
     "date-fns": "^4.1.0",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
