--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.0",
+    "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
