--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "date-fns": "^4.1.0",
     "express": "^4.21.0",
     "http-status-codes": "^2.3.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
