--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
