--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "date-fns": "^4.1.0",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "express-winston": "^4.2.0",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
