--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^7.2.0",
     "express-winston": "^4.2.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
